--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    print("Hello Mr.Holsten!")
-    print("Check my page out")
+    Hello Mr.Holsten
+    Check my page out
    
   </head>
   <body>
