--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     Hello Mr.Holsten
     Check my page out
+    <a href="lucianrodriguez.github.io">Link to my home page!</a>
    
   </head>
   <body>
