--- a/index.html
+++ b/index.html
@@ -7,7 +7,51 @@
     <a href="lucianrodriguez.github.io">Link to my home page!</a>
    
   </head>
+  
   <body>
+<ul>
+<!–– home-->
+<li><a href="index.html">Home</a></li>
+<!–– in progress BHS TRECS courses-->
+<li><a href="BHS-TRECS-Course-Catalog-2018-19.pdf">CS Courses</a></li>
 
+<!–– JavaScript projects dropdown-->
+<li class="dropdown">
+<a href="javascript:void(0)" class="dropbtn">JavaScript projects</a>
+<div class="dropdown-content">
+<a href="geoguesser.html">Geoguesser</a>
+<a href="wordgame.html">Find-A-Word Game</a>
+<a href="map.html">Google Map API</a>
+
+
+</div>
+</li>
+<!–– p5 projects dropdown-->
+<li class="dropdown">
+<a href="javascript:void(0)" class="dropbtn">Mr. H's p5.js projects</a>
+<div class="dropdown-content">
+<a href="p5.html">Recursion</a>
+<a href="Popcorn.html">Popcorn</a>
+<a href="Mondrian.html">Mondrian</a>
+<a href="KhanOhNoes.html">Oh Noes! (from Khan Academy)</a>
+<a href="homeruns.html">Graphing HRs</a>
+
+</div>
+</li>
+
+<!–– student projects dropdown-->
+<li class="dropdown">
+<a href="javascript:void(0)" class="dropbtn">Student Websites 2019</a>
+<div class="dropdown-content">
+<a href="p2sites.html">Mr. Holston's period 2</a>
+<a href="p3sites.html">Mr. Holston's period 3</a>
+
+</div>
+</li>
+
+
+</ul>
+
+<!–– nav bar ends here-->
   </body>
 </html>
