--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 <style>
 .navbar {
   overflow: hidden;
-  background-color: #333;
+  background-color: #69;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .navbar a {
-  float: left;
-  font-size: 16px;
-  color: white;
+  float: right;
+  font-size: 19px;
+  color: green;
   text-align: center;
   padding: 14px 16px;
-  text-decoration: none;
+  
 }
 
 .dropdown {
@@ -26,10 +26,10 @@
 
 .dropdown .dropbtn {
   cursor: pointer;
-  font-size: 16px;  
+  font-size: 19px;  
   border: none;
   outline: none;
-  color: white;
+  color: brown0;
   padding: 14px 16px;
   background-color: inherit;
   font-family: inherit;
@@ -51,11 +51,11 @@
 
 .dropdown-content a {
   float: none;
-  color: black;
+  color: pink;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
-  text-align: left;
+  text-align: right;
 }
 
 .dropdown-content a:hover {
