--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
     <i class="fa fa-caret-down"></i>
   </button>
   <div class="dropdown-content" id="myDropdown">
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
+    <a href="#">https://www.bikeradar.com/mtb/</a>
+    <a href="#">https://www.pinkbike.com/</a>
+    <a href="#">https://www.singletracks.com/articles/</a>
   </div>
   </div> 
 </div>
