--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 </div>
 
 <h3>Dropdown Menu inside a Navigation Bar</h3>
-<p>Click on the "Dropdown" link to see the dropdown menu.</p>
+<p>Here is my new website wich will be the host for all future projects!</p>
 
 <script>
 function myFunction() {
